[tool.poetry]
name = "buf-manager-py"
version = "0.1.0"
description = ""
authors = ["alekseikorobov <aleksei_korobov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
pywin32 = "^306"
pillow = "^10.3.0"
imagehash = "^4.3.1"
pyinstaller = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
